syntax = "proto3";

option go_package = "github.com/oidc-proxy-ecosystem/oidc-proxy/internal/proto";

package proto;

service Session {
    rpc Init(SettingRequest) returns (Empty) {}
    rpc Get(GetRequest) returns (GetResponse) {}
    rpc Put(PutRequest) returns (Empty) {}
    rpc Delete(DeleteRequest) returns (Empty) {}
    rpc Close(Empty) returns (Empty) {}
}

message SettingRequest {
    bytes config = 1;
    // repeated string endpoints = 1;
    // int32 cacheTime = 2;
    // string userName = 3;
    // string password = 4;
}

message GetRequest { 
    string key = 1; 
}
message PutRequest { 
    string key = 1;
    string value = 2; 
}
message DeleteRequest {
    string key = 1;
}

message GetResponse { 
    string value = 1;
}
message Empty {}